Setup canvas.js and added example visualization. Enabled display of same navigation on every page.

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -10,11 +10,17 @@ $theme-colors: (
 
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: darkgrey !important;
+}
+
+p {
+  color: darkgrey !important;
 }
 
 h2 {
   padding-top: 24px;
   padding-bottom: 6px;
+  color: darkgrey !important;
 }
 
 td {
