--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,7 +62,9 @@ nav ul a {
     margin: 0;
 }
 
-
+.nav-bg {
+    background: #4b4b4b;
+}
 
 nav a:hover, .logo-text:hover {
     color: #E1003A !important;
@@ -78,12 +80,15 @@ nav li:hover a {
 
 .logo-picture {
     margin-top: 3px;
+    position: absolute;
+    top: 0px;
+    left: 12px;
 }
 
 .logo-text {
     text-align: left;
     color: white;
-    padding-left: 9px;
+    padding-left: 60px;
     font-weight: normal;
 }
 
@@ -304,6 +309,11 @@ table input[type=checkbox] {
 }
 
 /* Exceptions */
+@media (max-width: 400px) {
+    .logo-text-hide-mobile {
+        display: none;
+    }
+}
 @media (max-width: 575.98px) {
     .button-table-search {
         width: 100% !important;
