Fixed coloring for navbar > bluish nav bg works great with Stuttgart Media University's red

--- a/public/components/nav.html
+++ b/public/components/nav.html
@@ -1,6 +1,6 @@
-<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-dark nav-bg fixed-top justify-content-between">
+<nav id="nav-placeholder" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top justify-content-between">
     <a class="navbar-brand" href="/">
-        <img src="assets/HdM_Logo_White.png" width="53" class="logo-picture d-inline-block align-top" alt="">
+        <img src="../assets/HdM_Logo_White.png" width="53" class="logo-picture d-inline-block align-top" alt="">
         <span class="logo-text">Study Administration<span class="logo-text-hide-mobile"> Portal</span></span>
     </a>
     <button class="navbar-toggler border-none" type="button" data-toggle="collapse"
@@ -36,6 +36,6 @@
                 <a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
             </li>
         </ul>
-        <a class="nav-profile-link"><img id="nav-profile-mobile" src="assets/Lisa_Avatar.png" alt="Profile image"></a>
+        <a class="nav-profile-link"><img id="nav-profile-mobile" src="../assets/Lisa_Avatar.png" alt="Profile image"></a>
     </div>
 </nav>
