--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,12 +63,8 @@ nav ul a {
     margin: 0;
 }
 
-.nav-bg {
-    background: #565656;
-}
-
 #nav-placeholder {
-    border-bottom: 2px solid #9c9c9c;
+    border-bottom: 2px solid #5b5f6a;
 }
 
 nav a:hover, .logo-text:hover {
@@ -335,7 +331,7 @@ table input[type=checkbox] {
 @media (max-width: 992.98px) {
 
     nav ul li:not(:last-child) {
-        border-bottom: #525252 2px solid;
+        border-bottom: #3d404b 2px solid;
     }
 
     #nav-profile-mobile {
